[package]
name = "rs_maps_benchmarking"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.14"
dashmap = "5.5"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"
parking_lot = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "maps"
harness = false
